--- a/ninchatsdk/src/main/res/layout/activity_chat_test.xml
+++ b/ninchatsdk/src/main/res/layout/activity_chat_test.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintBottom_toTopOf="@id/log"
+        app:layout_constraintBottom_toTopOf="@+id/log"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
