Update the initial view to match the desired look

--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="ninchat_colorPrimary">#000</color>
+    <color name="ninchat_colorAccent">#37A1FC</color>
+    <color name="ninchat_start_header_background">#444</color>
+    <color name="ninchat_start_text">#fff</color>
 </resources>
