--- a/ninchatsdk/src/main/res/layout/activity_ninchat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat.xml
@@ -1,64 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.NinchatActivity">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/title_background"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/ninchat_start_header_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:paddingTop="40dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:paddingBottom="40dp">
 
         <TextView
-            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ninchat_start_title"
             android:textColor="@color/ninchat_start_text"
             android:textSize="17sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_gravity="center_horizontal"/>
 
         <TextView
-            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ninchat_start_description"
             android:textColor="@color/ninchat_start_text"
             android:textSize="16sp"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_gravity="center_horizontal"/>
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@id/description"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            android:layout_gravity="center_horizontal">
 
             <LinearLayout
                 android:id="@+id/blog"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:layout_width="70dp"
@@ -67,6 +56,7 @@
                     android:adjustViewBounds="true"
                     android:scaleType="fitCenter"
                     android:contentDescription="@string/ninchat_blog_link"
+                    android:layout_gravity="center_horizontal"
                     android:onClick="onBlogLinkClick" />
 
                 <TextView
@@ -74,29 +64,25 @@
                     android:layout_height="wrap_content"
                     android:text="@string/ninchat_blog_link"
                     android:textColor="@color/ninchat_start_text"
-                    android:textAlignment="center"
+                    android:layout_gravity="center_horizontal"
                     android:textSize="13sp"/>
 
             </LinearLayout>
 
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
     <Button
         android:id="@+id/start_button"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/ninchat_colorAccent"
         android:text="@string/ninchat_start_chat"
         android:textColor="@color/ninchat_start_text"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/title_background"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:onClick="onStartButtonClick"/>
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
