--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="NinchatTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="NinchatTheme" parent="android:Theme.Material.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/ninchat_colorPrimary</item>
-        <item name="android:statusBarColor">@color/ninchat_colorPrimary</item>
-        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>-->
-        <item name="actionBarStyle">@style/NinchatTheme.ActionBar.Logo</item>
+        <item name="android:colorPrimary">@color/ninchat_colorPrimary</item>
+        <item name="android:colorPrimaryDark">@color/ninchat_colorPrimaryDark</item>
+        <item name="android:colorAccent">@color/ninchat_colorAccent</item>
         <item name="android:actionBarStyle">@style/NinchatTheme.ActionBar.Logo</item>
     </style>
 
-    <style name="NinchatTheme.ActionBar.Logo" parent="Widget.AppCompat.Light.ActionBar.Solid">
-        <item name="icon">@drawable/ninchat_logo</item>
-        <item name="android:icon">@drawable/ninchat_logo</item>
-        <item name="logo">@drawable/ninchat_logo</item>
-        <item name="android:logo">@drawable/ninchat_logo</item>
-        <item name="displayOptions">useLogo|showHome|showTitle</item>
-        <item name="android:displayOptions">useLogo|showHome|showTitle</item>
+    <style name="NinchatTheme.Back" parent="NinchatTheme">
+        <item name="android:actionBarStyle">@style/NinchatTheme.ActionBar.Back</item>
+    </style>
+
+    <style name="NinchatTheme.ActionBar.Logo" parent="android:Widget.Material.ActionBar.Solid">
+        <item name="android:homeAsUpIndicator">@drawable/ninchat_logo</item>
+        <item name="android:displayOptions">homeAsUp|showTitle</item>
+    </style>
+
+    <style name="NinchatTheme.ActionBar.Back" parent="android:Widget.Material.ActionBar.Solid">
+        <item name="android:displayOptions">homeAsUp|showTitle</item>
     </style>
 </resources>
