Add initial version of the chat view

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_review.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_review.xml
@@ -123,6 +123,7 @@
         android:layout_height="wrap_content"
         android:text="@string/ninchat_review_skip"
         android:textSize="15sp"
+        android:textColor="@color/ninchat_colorAccent"
         android:layout_marginBottom="120dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"/>
