--- a/ninchatsdk/src/main/res/layout/activity_ninchat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat.xml
@@ -82,6 +82,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:layout_marginTop="30dp"
-        android:onClick="onStartButtonClick"/>
+        android:onClick="onStartButtonClick"
+        android:enabled="false"/>
 
 </LinearLayout>
