--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp">
 
-    <TextView
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/start_margin"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/ninchat_contact_us"/>
+        android:layout_weight="0.3" />
+
+    <RelativeLayout
+        android:id="@+id/message_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.7"
+        android:elevation="2dp">
+
+        <TextView
+            android:id="@+id/message_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/ninchat_contact_us" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/end_margin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.3"
+        android:visibility="gone"/>
 
 </LinearLayout>
