--- a/ninchatsdk/src/main/res/layout/activity_ninchat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat.xml
@@ -76,13 +76,14 @@
         android:id="@+id/start_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/ninchat_colorAccent"
+        android:background="@drawable/ninchat_rounded_button"
+        android:backgroundTint="@color/ninchat_colorAccent"
         android:text="@string/ninchat_start_chat"
         android:textColor="@color/ninchat_start_text"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:layout_marginTop="30dp"
         android:onClick="onStartButtonClick"
-        android:enabled="false"/>
+        android:enabled="true"/>
 
 </LinearLayout>
