--- a/ninchatsdk/src/main/res/layout/activity_ninchat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -72,18 +72,22 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/start_button"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/queue_progress"
+        android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="@drawable/ninchat_rounded_button"
-        android:backgroundTint="@color/ninchat_colorAccent"
-        android:text="@string/ninchat_start_chat"
-        android:textColor="@color/ninchat_start_text"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
         android:layout_marginTop="30dp"
-        android:onClick="onStartButtonClick"
-        android:enabled="true"/>
+        android:indeterminateTint="@color/ninchat_colorAccent"
+        android:layout_gravity="center_horizontal"
+        android:visibility="visible"
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/queue_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_queue"/>
 
 </LinearLayout>
