UI tweaking for the queue list and queueing views

--- a/ninchatsdk/src/main/res/layout/item_queue.xml
+++ b/ninchatsdk/src/main/res/layout/item_queue.xml
@@ -2,19 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:layout_marginTop="@dimen/ninchat_button_vertical_margin"
+    android:layout_marginBottom="@dimen/ninchat_button_vertical_margin"
     xmlns:tools="http://schemas.android.com/tools">
 
     <Button
         android:id="@+id/queue_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        tools:text="Queue"
-        android:background="@drawable/ninchat_rounded_button"
-        android:backgroundTint="@color/ninchat_colorAccent"
+        android:paddingStart="@dimen/ninchat_button_horizontal_padding"
+        android:paddingEnd="@dimen/ninchat_button_horizontal_padding"
+        tools:text="Queue name that is far too long to fit in one line"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
