--- a/ninchatsdk/src/main/res/drawable/ninchat_rounded_button_close.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_rounded_button_close.xml
@@ -3,7 +3,7 @@
     <corners
         android:radius="@dimen/ninchat_button_corner_radius"
         />
-    <solid android:color="@color/ninchat_colorAccent" />
+    <solid android:color="@android:color/transparent" />
     <stroke
         android:width="1dp"
         android:color="@color/ninchat_colorAccent"
