--- a/ninchatsdk/src/main/res/layout/activity_ninchat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat.xml
@@ -1,83 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.NinchatActivity">
 
     <LinearLayout
+        android:id="@+id/ninchat_acvitity_top_matter"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/ninchat_start_header_background"
-        android:paddingTop="40dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:paddingBottom="40dp">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:paddingTop="@dimen/ninchat_activity_top_matter_top_margin"
+        android:paddingBottom="@dimen/ninchat_activity_top_matter_bottom_margin">
 
         <TextView
+            android:id="@+id/ninchat_activity_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ninchat_start_title"
-            android:textColor="@color/ninchat_start_text"
-            android:textSize="17sp"
+            tools:text="Welcome"
             android:textStyle="bold"
+            android:paddingStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
+            android:paddingEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
+            android:layout_marginBottom="@dimen/ninchat_activity_top_matter_buttons_top_margin"
             android:layout_gravity="center_horizontal"/>
 
         <TextView
+            android:id="@+id/ninchat_activity_no_queues"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ninchat_start_description"
-            android:textColor="@color/ninchat_start_text"
-            android:textSize="16sp"
-            android:layout_marginTop="15dp"
-            android:layout_gravity="center_horizontal"/>
+            tools:text="No queues"
+            android:layout_marginTop="@dimen/ninchat_button_vertical_margin"
+            android:paddingStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
+            android:paddingEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
+            android:layout_marginBottom="@dimen/ninchat_button_vertical_margin"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ninchat_activity_queue_list"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center_horizontal">
+            android:layout_marginStart="@dimen/ninchat_button_queue_horizontal_margin"
+            android:layout_marginEnd="@dimen/ninchat_button_queue_horizontal_margin"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_queue"
+            tools:itemCount="3"/>
 
-            <LinearLayout
-                android:id="@+id/blog"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onBlogLinkClick">
-
-                <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/ninchat_blog"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:contentDescription="@string/ninchat_blog_link"
-                    android:layout_gravity="center_horizontal" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ninchat_blog_link"
-                    android:textColor="@color/ninchat_start_text"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="13sp"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
+        <Button
+            android:id="@+id/ninchat_activity_close"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="@dimen/ninchat_button_vertical_margin"
+            android:layout_marginStart="@dimen/ninchat_button_queue_horizontal_margin"
+            android:layout_marginEnd="@dimen/ninchat_button_queue_horizontal_margin"
+            android:layout_marginBottom="@dimen/ninchat_button_vertical_margin"
+            style="@style/NinchatTheme.Button.Close"
+            tools:text="Close chat"
+            android:onClick="onCloseClick"/>
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/queue_list"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_queue"/>
+        android:layout_below="@id/ninchat_acvitity_top_matter"
+        android:background="@color/ninchat_activity_bottom_matter_background"
+        android:padding="@dimen/ninchat_activity_bottom_matter_padding"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/ninchat_activity_motd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Message of the day"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
+
+</RelativeLayout>
