--- a/ninchatsdk/src/main/res/layout/activity_ninchat_queue.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_queue.xml
@@ -1,60 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.NinchatQueueActivity">
 
     <LinearLayout
+        android:id="@+id/ninchat_queue_activity_top_matter"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/ninchat_start_header_background"
-        android:paddingTop="70dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:paddingBottom="40dp">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:paddingTop="@dimen/ninchat_queue_activity_top_matter_top_margin"
+        android:paddingBottom="@dimen/ninchat_queue_activity_top_matter_bottom_margin">
         
         <ImageView
-            android:id="@+id/title_progress"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/ninchat_queue_activity_progress"
+            android:layout_width="@dimen/ninchat_queue_activity_progress_size"
+            android:layout_height="@dimen/ninchat_queue_activity_progress_size"
+            android:layout_gravity="center_horizontal"
             android:src="@drawable/ninchat_progress"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:contentDescription="@string/ninchat_queueing"
-            android:layout_gravity="center_horizontal"/>
+            android:adjustViewBounds="true"/>
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/ninchat_queue_activity_queue_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ninchat_queue_title"
-            android:textColor="@color/ninchat_start_text"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center_horizontal"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ninchat_queue_description"
-            android:textColor="@color/ninchat_start_text"
-            android:textSize="17sp"
+            android:layout_marginTop="@dimen/ninchat_queue_activity_queue_status_top_margin"
+            tools:text="Queue status"
             android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/ninchat_queue_message"
-        android:textSize="17sp"
-        android:textAlignment="center"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"/>
+        android:padding="@dimen/ninchat_queue_activity_bottom_matter_padding"
+        android:layout_below="@id/ninchat_queue_activity_top_matter"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/ninchat_activity_bottom_matter_background">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/ninchat_queue_activity_queue_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="In queue message"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
+
+</RelativeLayout>
