--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="NinchatTheme" parent="android:Theme.Material.Light.DarkActionBar">
+    <style name="NinchatTheme" parent="android:Theme.Material.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:colorPrimary">@color/ninchat_colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/ninchat_colorPrimaryDark</item>
         <item name="android:colorAccent">@color/ninchat_colorAccent</item>
-        <item name="android:actionBarStyle">@style/NinchatTheme.ActionBar.Logo</item>
+        <item name="android:textSize">@dimen/ninchat_text_size</item>
+        <item name="android:textColor">@color/ninchat_colorPrimary</item>
+        <item name="android:autoLink">all</item>
+        <item name="android:textColorLink">@color/ninchat_colorAccent</item>
+        <item name="android:buttonStyle">@style/NinchatTheme.Button</item>
     </style>
 
-    <style name="NinchatTheme.ActionBar.Logo" parent="android:Widget.Material.ActionBar.Solid">
-        <item name="android:homeAsUpIndicator">@drawable/ninchat_logo</item>
-        <item name="android:displayOptions">homeAsUp|showTitle</item>
+    <style name="NinchatTheme.Button" parent="android:Widget.Material.Light.Button">
+        <item name="android:height">@dimen/ninchat_button_height</item>
+        <item name="android:background">@drawable/ninchat_rounded_button</item>
+        <item name="android:layout_marginTop">@dimen/ninchat_button_vertical_margin</item>
+        <item name="android:layout_marginBottom">@dimen/ninchat_button_vertical_margin</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:lines">2</item>
+        <item name="android:elevation">0dp</item>
+    </style>
+
+    <style name="NinchatTheme.Button.Close" parent="NinchatTheme.Button">
+        <item name="android:background">@drawable/ninchat_rounded_button_close</item>
+        <item name="android:textColor">@color/ninchat_colorAccent</item>
     </style>
 
 </resources>
