--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_left.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_left.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="@dimen/ninchat_button_corner_radius"
+        android:radius="@dimen/ninchat_chat_activity_message_bubble_corner_radius"
+        android:topLeftRadius="0dp"
         />
     <solid android:color="@android:color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/ninchat_colorAccent"
-        />
 </shape>
