--- a/ninchatsdk/src/main/res/layout/activity_ninchat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat.xml
@@ -1,86 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/ninchat_activity_bottom_matter_background"
     tools:context=".activities.NinchatActivity">
 
     <LinearLayout
-        android:id="@+id/ninchat_acvitity_top_matter"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:paddingTop="@dimen/ninchat_activity_top_matter_top_margin"
-        android:paddingBottom="@dimen/ninchat_activity_top_matter_bottom_margin">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/ninchat_activity_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Welcome"
-            android:textStyle="bold"
-            android:paddingStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
-            android:paddingEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
-            android:layout_marginBottom="@dimen/ninchat_activity_top_matter_buttons_top_margin"
-            android:layout_gravity="center_horizontal"/>
+        <LinearLayout
+            android:id="@+id/ninchat_acvitity_top_matter"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:orientation="vertical"
+            android:paddingTop="@dimen/ninchat_activity_top_matter_top_margin"
+            android:paddingBottom="@dimen/ninchat_activity_top_matter_bottom_margin"
+            android:background="@android:color/white">
 
-        <TextView
-            android:id="@+id/ninchat_activity_no_queues"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="No queues"
-            android:layout_marginTop="@dimen/ninchat_button_vertical_margin"
-            android:paddingStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
-            android:paddingEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
-            android:layout_marginBottom="@dimen/ninchat_button_vertical_margin"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone"
-            tools:visibility="visible"/>
+            <TextView
+                android:id="@+id/ninchat_activity_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="@dimen/ninchat_activity_top_matter_buttons_top_margin"
+                android:paddingStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:paddingEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:textStyle="bold"
+                tools:text="Welcome" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/ninchat_activity_queue_list"
+            <TextView
+                android:id="@+id/ninchat_activity_no_queues"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/ninchat_button_vertical_margin"
+                android:layout_marginBottom="@dimen/ninchat_button_vertical_margin"
+                android:paddingStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:paddingEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:visibility="gone"
+                tools:text="No queues"
+                tools:visibility="visible" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ninchat_activity_queue_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/ninchat_button_queue_horizontal_margin"
+                android:layout_marginEnd="@dimen/ninchat_button_queue_horizontal_margin"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                tools:itemCount="3"
+                tools:listitem="@layout/item_queue" />
+
+            <Button
+                android:id="@+id/ninchat_activity_close"
+                style="@style/NinchatTheme.Button.Close"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginStart="@dimen/ninchat_button_queue_horizontal_margin"
+                android:layout_marginTop="@dimen/ninchat_button_vertical_margin"
+                android:layout_marginEnd="@dimen/ninchat_button_queue_horizontal_margin"
+                android:layout_marginBottom="@dimen/ninchat_button_vertical_margin"
+                android:onClick="onCloseClick"
+                tools:text="Close chat" />
+
+        </LinearLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/ninchat_button_queue_horizontal_margin"
-            android:layout_marginEnd="@dimen/ninchat_button_queue_horizontal_margin"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_queue"
-            tools:itemCount="3"/>
+            android:padding="@dimen/ninchat_activity_bottom_matter_padding">
 
-        <Button
-            android:id="@+id/ninchat_activity_close"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginTop="@dimen/ninchat_button_vertical_margin"
-            android:layout_marginStart="@dimen/ninchat_button_queue_horizontal_margin"
-            android:layout_marginEnd="@dimen/ninchat_button_queue_horizontal_margin"
-            android:layout_marginBottom="@dimen/ninchat_button_vertical_margin"
-            style="@style/NinchatTheme.Button.Close"
-            tools:text="Close chat"
-            android:onClick="onCloseClick"/>
+            <TextView
+                android:id="@+id/ninchat_activity_motd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                tools:text="Message of the day" />
+
+        </RelativeLayout>
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ninchat_acvitity_top_matter"
-        android:background="@color/ninchat_activity_bottom_matter_background"
-        android:padding="@dimen/ninchat_activity_bottom_matter_padding"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
-
-        <TextView
-            android:id="@+id/ninchat_activity_motd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Message of the day"
-            android:textAlignment="center"
-            android:layout_centerHorizontal="true"/>
-
-    </RelativeLayout>
-
-</RelativeLayout>
+</ScrollView>
