--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -17,6 +17,8 @@
         <item name="android:background">@drawable/ninchat_rounded_button</item>
         <item name="android:layout_marginTop">@dimen/ninchat_button_vertical_margin</item>
         <item name="android:layout_marginBottom">@dimen/ninchat_button_vertical_margin</item>
+        <item name="android:paddingStart">@dimen/ninchat_button_horizontal_padding</item>
+        <item name="android:paddingEnd">@dimen/ninchat_button_horizontal_padding</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:lines">2</item>
