--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -54,6 +54,7 @@
                 android:layout_gravity="center_vertical"
                 android:scaleType="fitCenter"
                 android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
+                android:onClick="onAttachmentClick"
                 android:visibility="gone"
                 tools:visibility="visible"/>
 
@@ -102,21 +103,31 @@
         android:id="@+id/videoContainer"
         android:layout_width="match_parent"
         android:layout_height="256dp"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <android.opengl.GLSurfaceView
-            android:id="@+id/remoteVideo"
+            android:id="@+id/video"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true" />
 
-        <android.opengl.GLSurfaceView
-            android:id="@+id/localVideo"
-            android:layout_width="120dp"
-            android:layout_height="100dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true" />
-
     </RelativeLayout>
+
+    <include
+        android:id="@+id/ninchat_chat_video_call_consent_dialog"
+        layout="@layout/fragment_video_call_consent_dialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:visibility="gone"/>
+
+    <include
+        android:id="@+id/ninchat_chat_file_picker_dialog"
+        layout="@layout/fragment_file_type_dialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
